--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -75,60 +76,64 @@
     </section>
 
     
+<section class="our-approach-section">
+    <div class="container">
+        <p class="section-tag"><i class="fas fa-hand-point-right"></i> Our Approach</p>
+        <div class="approach-steps-grid">
+            <div class="approach-step-card">
+                <div class="step-icon step-icon-1"><i class="fas fa-lightbulb"></i></div>
+                <h4>You Bring the Vision</h4>
+                <p>Share your ideas, goals, and dreams with us.</p>
+                <p class="small-text">We start by listening to understand your unique vision and objectives.</p>
+            </div>
 
-    <section class="services-and-feedback-grid">
-        <div class="container">
-            <div class="grid-container">
+            <div class="approach-step-card">
+                <div class="step-icon step-icon-2"><i class="fas fa-microphone-alt"></i></div>
+                <h4>We Bring the Voice</h4>
+                <p>Our team develops a tailored voice that resonates with your audience.</p>
+            </div>
 
-                <div class="grid-item card-green-accent">
-                    <div class="card-icon-circle green-circle"><i class="fas fa-magic"></i></div>
-                    <h3>You Bring the Vision</h3>
-                    <p>We collaborate with individuals and brands ready to stand out. Whether you’re launching a new product, re-branding, building an audience, or telling your story.</p>
-                    <a href="#" class="card-link">Discover our process <i class="fas fa-arrow-right"></i></a>
-                </div>
+            <div class="approach-step-card">
+                <div class="step-icon step-icon-3"><i class="fas fa-hands-helping"></i></div>
+                <h4>We Collaborate</h4>
+                <p>Through collaboration, we ensure every word serves your purpose.</p>
+            </div>
 
-                <div class="grid-item card-orange-accent">
-                    <div class="card-icon-circle orange-circle"><i class="fas fa-pen-nib"></i></div>
-                    <h3>We'll Bring the Voice</h3>
-                    <p>Crafted narratives that resonate and convert</p>
-                </div>
-
-                <div class="grid-item card-white-plain">
-                    <div class="card-icon-circle grey-circle"><i class="fas fa-handshake"></i></div>
-                    <h3>Creative Partners</h3>
-                    <p>Not just a writing team—your strategic allies</p>
-                </div>
-
-                <div class="grid-item card-long-process">
-                    <div class="card-top">
-                        <div class="card-icon-circle dark-grey-circle"><i class="fas fa-bolt"></i></div>
-                        <h3>Our Process</h3>
-                    </div>
-                    <p>Our process is personal, purposeful, and tailored to your needs. We'll meet you at your vision and amplify it through strategic storytelling and compelling content.</p>
-                    <div class="process-links">
-                        <a href="#">Personal<br>Approach</a>
-                        <a href="#">Purposeful<br>Strategy</a>
-                        <a href="#">Tailored<br>Solutions</a>
-                    </div>
-                </div>
-
-                <div class="grid-item card-testimonial">
-                    <div class="stars">
-                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                    </div>
-                    <p class="quote-text">"Inkslingers transformed our brand voice completely. They're true creative partners."</p>
-                    <p class="quote-author">-- Sarah M., CEO</p>
-                </div>
-
-                <div class="grid-item card-blue-accent">
-                    <div class="card-icon-circle white-heart-circle"><i class="fas fa-heart"></i></div>
-                    <h3>98%</h3>
-                    <p>Client Satisfaction</p>
-                </div>
-
+            <div class="approach-step-card">
+                <div class="step-icon step-icon-4"><i class="fas fa-check-circle"></i></div>
+                <h4>You Stand Out</h4>
+                <p>Your brand emerges with a voice that captivates and converts.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
+<section class="ready-creative-section">
+    <div class="container two-col-layout">
+        <div class="left-ready-col">
+            <p class="section-tag"><i class="fas fa-bullseye"></i> Our Approach</p>
+            <h2>Ready to Stand Out?</h2>
+            <p>We collaborate with individuals and brands ready to stand out. Whether you’re launching a new product, re-branding, building an audience, or telling your story—we’ll meet you at your vision and amplify it.</p>
+            <div class="stats-row">
+                <span class="stat-item">500+ Clients</span>
+                <span class="stat-item">98% Success</span>
+            </div>
+        </div>
+
+        <div class="right-creative-col">
+            <div class="creative-partner-card">
+                <p class="section-tag"><i class="fas fa-paint-brush"></i> Creative Partners</p>
+                <h3>Creative Partners</h3>
+                <p>Our process is personal, purposeful, and tailored to your needs. When you work with InkSlingers, you’re not just hiring a writing team—you’re gaining creative partners.</p>
+                <ul>
+                    <li>Personal & collaborative approach</li>
+                    <li>Purposeful, results-driven content</li>
+                    <li>Tailored to your unique needs</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
 
 
     <section class="services-pricing-section">
@@ -190,6 +195,92 @@
         </div>
     </div>
 </section>
+
+
+
+<section class="contact-us-section">
+    <div class="container">
+        <h2 class="section-title">Contact Us</h2>
+        <p class="section-subtitle">Ready to transform your content? Let's discuss your project and bring your vision to life.</p>
+
+        <div class="contact-content-grid">
+            <div class="get-in-touch">
+                <h3>Get In Touch</h3>
+                <p>Choose your preferred way to connect with us. We're here to help bring your content vision to life.</p>
+
+                <div class="contact-card">
+                    <div class="contact-card-icon"><i class="fas fa-envelope"></i></div>
+                    <div class="contact-card-info">
+                        <h4>Email Us</h4>
+                        <p>Get a response within 24 hours</p>
+                        <a href="mailto:hello@inksligners.com">hello@inksligners.com</a>
+                    </div>
+                    <a href="#" class="contact-card-arrow"><i class="fas fa-arrow-right"></i></a>
+                </div>
+
+                <div class="contact-card">
+                    <div class="contact-card-icon"><i class="fas fa-phone-alt"></i></div>
+                    <div class="contact-card-info">
+                        <h4>Call Us</h4>
+                        <p>Mon-Fri 9AM-6PM EST</p>
+                        <a href="tel:+15551234567">+1(555)123-4567</a>
+                    </div>
+                    <a href="#" class="contact-card-arrow"><i class="fas fa-arrow-right"></i></a>
+                </div>
+              
+            </div>
+
+            <div class="send-message-form">
+                <h3>Send us a message</h3>
+                <p>Tell us about your project and we'll get back to you soon.</p>
+
+                <form>
+                    <div class="form-group-row">
+                        <div class="form-group">
+                            <label for="fullName">Name *</label>
+                            <input type="text" id="fullName" placeholder="Your full name">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email *</label>
+                            <input type="email" id="email" placeholder="your@email.com">
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label>Project Type</label>
+                        <div class="project-type-options">
+                            <button type="button">Copywriting</button>
+                            <button type="button">Content Writing</button>
+                            <button type="button">Brand Voice</button>
+                            <button type="button">Creative Writing</button>
+                            <button type="button">Full Package</button>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Message *</label>
+                        <textarea id="message" rows="6" placeholder="Tell us about your project, goals, and timeline..."></textarea>
+                    </div>
+
+                    <button type="submit" class="send-message-btn">
+                        <i class="fas fa-paper-plane"></i> Send Message
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
 
 
 <footer class="main-footer">
