--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
    <section class="about-us-sections">
         <div class="left-about-section">
             <div class="left-content-wrapper">
-                <p class="section-tag"><i class="fas fa-bookmark"></i> Our Story</p>
-                <h2>The InkSlingers Story</h2>
-                <div class="quote-icon-deco"></div> <p>Here at InkSlingers, we start by listening—your vision fuels our words. Every line we craft is purposeful, never generic.</p>
+                <p class="section-tag"></i> Our Story</p>
+                <h2>The <span style="color: #38AC61; text-decoration: underline;">InkSlingers</span> Story</h2>
+                 <p>Here at InkSlingers, we start by listening—your vision fuels our words. Every line we craft is purposeful, never generic.</p>
                 <p>No templates, just tailored brilliance that speaks to who you are. We care about impact, not just output. And best of all? We're easy to work with – collaborative, on time, and always drama-free.</p>
                 <a href="#" class="btn btn-dark-section">Discover Our Process <i class="fas fa-arrow-right"></i></a>
             </div>
@@ -62,15 +62,15 @@
 
         <div class="right-info-section">
             <div class="info-card info-card-green">
-                <div class="card-icon"><i class="fas fa-users"></i></div> <h3>Who We Are</h3>
+                <div class="card-icon"><img src="images/user (1).svg" alt=""></div> <h3>Who We Are</h3>
                 <p>Inkslingers Writing Co. is a team of bold, passionate storytellers dedicated to helping brands, entrepreneurs, and visionaries communicate with clarity, creativity, and confidence.</p>
                 <p>Founded by writers who believe in the power of words to change lives and shape the world.</p>
             </div>
 
             <div class="info-card info-card-orange">
-                <div class="card-icon"><i class="fas fa-lightbulb"></i></div> <h3>What We Do</h3>
-                <p>We produce content that not only sounds good, but drives results. From sales-driven copy to soul-stirring stories, we don't just write—we elevate.</p>
-                <p>We exist to turn ideas into influence—into compelling sentences at a time.</p>
+                <div class="card-icon"><img src="images/mission (1).svg" alt=""></div> <h3 style="color: #eb4711;">What We Do</h3>
+                <p style="color: #f97316;">We produce content that not only sounds good, but drives results. From sales-driven copy to soul-stirring stories, we don't just write—we elevate.</p>
+                <p style="color: #f97316">We exist to turn ideas into influence—into compelling sentences at a time.</p>
             </div>
         </div>
     </section>
