--- a/index.html
+++ b/index.html
@@ -152,58 +152,145 @@
             <div class="service-card-grid">
 
                 <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-file-alt"></i>
+                    <div class="card-header">
+                        <div class="icon-wrapper">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24"
+                                height="24">
+                                <path
+                                    d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v4h4v12H6zm2-8h8v2H8zm0 4h8v2H8z" />
+                            </svg>
+                        </div>
+                        <h3>Content Writing</h3>
                     </div>
-                    <h3>Content Writing</h3>
-                    <p>Establish thought leadership with content that educates and converts.</p>
-                    <ul>
+                    <p class="card-description">Establish thought leadership with content that educates and and
+                        converts.</p>
+                    <ul class="service-list">
                         <li>Blog Posts</li>
                         <li>Articles</li>
                         <li>Web Content</li>
-                        <li>Case Studies</li>
                     </ul>
                     <div class="card-footer">
-                        <span class="price">From $199</span>
-                        <a href="#" class="btn-service-card">Learn More <i class="fas fa-arrow-right"></i></a>
+
+                        <a href="#" class="learn-more-button">
+                            Learn More
+
+                        </a>
                     </div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-chart-line"></i>
+                    <div class="card-header">
+                        <div class="icon-wrapper">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24"
+                                height="24">
+                                <path
+                                    d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v4h4v12H6zm2-8h8v2H8zm0 4h8v2H8z" />
+                            </svg>
+                        </div>
+                        <h3>Copywriting</h3>
                     </div>
-                    <h3>SEO Content</h3>
-                    <p>Content that dominates search results while engaging your audience.</p>
-                    <ul>
-                        <li>SEO Optimization</li>
-                        <li>Keyword Research</li>
-                        <li>Content Strategy</li>
-                        <li>Competitor Analysis</li>
+                    <p class="card-description">Inkslingers crafts high-converting copy, from impactful sales pages to
+                        engaging web content.</p>
+                    <ul class="service-list">
+                        <li>Sales Pages</li>
+                        <li>Product Descriptions</li>
+                        <li>Email Sequences</li>
+                        <li>Web Content that Converts </li>
                     </ul>
                     <div class="card-footer">
-                        <span class="price">From $249</span>
-                        <a href="#" class="btn-service-card">Learn More <i class="fas fa-arrow-right"></i></a>
+
+                        <a href="#" class="learn-more-button">
+                            Learn More
+
+                        </a>
                     </div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-share-alt"></i>
+                    <div class="card-header">
+                        <div class="icon-wrapper">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24"
+                                height="24">
+                                <path
+                                    d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v4h4v12H6zm2-8h8v2H8zm0 4h8v2H8z" />
+                            </svg>
+                        </div>
+                        <h3>Brand Voice Development</h3>
                     </div>
-                    <h3>Social Media</h3>
-                    <p>Engaging social media content that grows your following and drives engagement.</p>
-                    <ul>
-                        <li>Post Creation</li>
-                        <li>Content Calendar</li>
-                        <li>Community Building</li>
-                        <li>Hashtag Strategy</li>
+                    <p class="card-description">We help you find your unique voice, shape your authentic identity, and
+                        connect genuinely with your audience.</p>
+                    <ul class="service-list">
+                        <li>Find Your Voice</li>
+                        <li>Shape Your Identity </li>
+                        <li>Connect Authentically.</li>
                     </ul>
                     <div class="card-footer">
-                        <span class="price">From $179</span>
-                        <a href="#" class="btn-service-card">Learn More <i class="fas fa-arrow-right"></i></a>
+
+                        <a href="#" class="learn-more-button">
+                            Learn More
+
+                        </a>
                     </div>
                 </div>
+
+
+                <div class="service-card">
+                    <div class="card-header">
+                        <div class="icon-wrapper">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24"
+                                height="24">
+                                <path
+                                    d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v4h4v12H6zm2-8h8v2H8zm0 4h8v2H8z" />
+                            </svg>
+                        </div>
+                        <h3>Creative Writing Services</h3>
+                    </div>
+                    <p class="card-description">We bring your ideas to life through compelling storytelling and expert
+                        scripting for your unique narrative.</p>
+                    <ul class="service-list">
+                        <li>Storytelling</li>
+                        <li> Scripting For Your Narrative</li>
+                    </ul>
+                    <div class="card-footer">
+
+                        <a href="#" class="learn-more-button">
+                            Learn More
+
+                        </a>
+                    </div>
+                </div>
+
+
+
+
+
+                <div class="service-card">
+                    <div class="card-header">
+                        <div class="icon-wrapper">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24"
+                                height="24">
+                                <path
+                                    d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zM6 20V4h7v4h4v12H6zm2-8h8v2H8zm0 4h8v2H8z" />
+                            </svg>
+                        </div>
+                        <h3>Editing and ProofReading</h3>
+                    </div>
+                    <p class="card-description">We transform your drafts into polished manuscripts and error-free
+                        business documents.</p>
+                    <ul class="service-list">
+                        <li>Polished Manuscripts</li>
+                        <li>Business Documents</li>
+                    </ul>
+                    <div class="card-footer">
+
+                        <a href="#" class="learn-more-button">
+                            Learn More
+
+                        </a>
+                    </div>
+                </div>
+
+
 
 
             </div>
@@ -214,7 +301,7 @@
 
     <section class="contact-us-section">
         <div class="container">
-            <h2 class="section-title">Contact Us</h2>
+            <h2 class="section-title">Contact <span style="color: #38AC61;">Us</span></h2>
             <p class="section-subtitle">Ready to transform your content? Let's discuss your project and bring your
                 vision to life.</p>
 
@@ -226,14 +313,14 @@
 
                     <div class="contact-card">
                         <div class="contact-icon-wrapper">
-                           <i class='bx bx-envelope bx-lg'></i>
+                            <i class='bx bx-envelope bx-lg'></i>
                         </div>
                         <div class="contact-text-content">
                             <h3>Email Us</h3>
                             <p>Get a response within 24 hours</p>
                             <a href="mailto:hopepearl76@gmail.com">hello@inkslingers.com</a>
                         </div>
-                        
+
                     </div>
 
 
@@ -245,9 +332,9 @@
                         <div class="contact-text-content">
                             <h3>Call Us</h3>
                             <p>Mon-Fri 9AM - 6PM GMT</p>
-                            <a href="tel:+234907 589 8404" style="color: #f97316; " >+234 907 589 8404</a>
+                            <a href="tel:+234907 589 8404" style="color: #f97316; ">+234 907 589 8404</a>
                         </div>
-                        
+
                     </div>
 
                 </div>
@@ -286,7 +373,7 @@
                         </div>
 
                         <button type="submit" class="send-message-btn">
-                         Send Message
+                            Send Message
                         </button>
                     </form>
                 </div>
