--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
     <section class="about-us-sections" id="about">
-        <div class="left-about-section">
+        <div class="left-about-section" data-aos="zoom-in-down" data-aos-duration="1000" data-aos-delay="500">
             <div class="left-content-wrapper" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500">
                 <h2>The <span style="color: #38AC61; text-decoration: underline;">InkSlingers</span> Story</h2>
                 <p>Here at InkSlingers,
